--- a/books_authors_app/templates/showAuthor.html
+++ b/books_authors_app/templates/showAuthor.html
@@ -8,6 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <style>
+
+      body{
+        margin: 11px;
+        border: 3px dashed  #8ac2d8;
+      }
       .container{
         margin: 16px;
         font-family: var(--bs-font-sans-serif);
@@ -66,6 +71,5 @@
       </form>
     </div>
 
-    <script src="" async defer></script>
   </body>
 </html>
