--- a/books_authors_app/templates/showBook.html
+++ b/books_authors_app/templates/showBook.html
@@ -9,6 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
+      body{
+        margin: 11px;
+        border: 3px dashed  #f7c669;
+      }
+
       .container{
         margin: 16px;
         font-family: var(--bs-font-sans-serif);
